--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,160 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans+Condensed:ital,wght@0,1..1000;1,1..1000&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Inter", sans-serif;
-}
-
-body {
-    background: linear-gradient(to bottom, #809A96, #0E5457);
-    height: 100vh;
-}
-
-button{
-    cursor: pointer;
-}
-
-.side__bar {
-    width: 300px;
-    height: 100%;
-    background-color: white;
-    box-shadow: 5px 0px 15px rgba(0, 0, 0, 0.185);
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    top: 0;
-    left: 0;
-    transition: .4s;
-    white-space: nowrap;
-    overflow: hidden;
-    z-index: 1;
-}
-
-.container-logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    width: 100%;
-    height: 100px;
-    transition: .4s;
-    padding-top: 20px;
-    position: relative;
-}
-
-#logo {
-    height: 60px;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.btn-side-bar {
-    margin-bottom: 20px;
-    cursor: pointer;
-    width: 50px;
-    margin-left: 25px;
-    border: none;
-    background-color: transparent;
-    font-size: 3rem;
-
-}
-
-.list__items__side {
-    display: flex;
-    flex-direction: column;
-    list-style-type: none;
-    gap: 45px;
-}
-
-.list__items__side > li {
-    font-size: 1.3rem;
-    display: flex;
-    line-height: 40px;
-    align-items: center;
-    height: 60px;
-}
-
-.list__items__side > li > .link {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: black;
-    width: 100%;
-    padding: 2rem;
-    transition: .4s;
-    position: relative;
-}
-
-.list__items__side > li > a:hover {
-    background-color: rgba(227, 227, 227, 0.387);
-}
-
-
-
-.txt-item::after{
-    content: "";
-    width: 0%;
-    height: 2px;
-    background-color: #148D90;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: 0.2s ease-in-out;
-}
-
-.list__items__side > li > a:hover .txt-item::after{
-    width: 100%;
-}
-
-.icon {
-    display: flex;
-    justify-content: center;
-    margin-right: 20px;
-    font-size: 2rem;
-}
-
-.icones{
-    margin-left: 2px;
-}
-
-.txt-item {
-    margin-left: 20px;
-    opacity: 1;
-}
-
-#main{
-    padding: 2rem;
-    margin: auto;
-    width: 50vw;
-    color: white;
-    height: 100vh;
-    text-align: center;
-    background-color: rgba(0, 128, 0, 0.339);
-}
-
-.inputs__task{
-    background-color: rgba(255, 0, 0, 0.374);
-    display: flex;
-    height: 80px;
-    gap: 20px;
-    align-items: center;
-    justify-content: center;
-}
-
-.inputs__task > input, select, button{
-    padding: .5rem;
-    border: none;
-
-}
-
-.edit__modal{
-    background-color: gray;
-    padding: 2rem;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
